# fastapi_sqlalchemy_backend

./: .env.example  .gitignore  Dockerfile  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
app/: main.py
app/api/v1/endpoints/: heroes.py
app/auth/: model.py  models.py  repo.py  repository.py  router.py  schemas.py  service.py
app/core/: base_model.py  config.py  database.py  exception.py  lifespan.py  models.py  repo_util.py  security.py
app/crud/: crud.py
app/foods/: __init__.py  model.py  repository.py  router.py  schema.py  service.py
app/models/: heroes.py
app/nutrition/: router.py  schema.py  service.py
app/profiles/: __init__.py  model.py  repo.py  repository.py  router.py  schema.py  service.py
app/reminders/: __init__.py  model.py  repository.py  router.py  schema.py  service.py
app/users/: model.py  repo.py  repository.py  router.py  schema.py  service.py
app/weights/: __init__.py  model.py  repository.py  router.py  schema.py  service.py
tests/: conftest.py  test_exceptions.py  test_lifespan.py  test_repo.py  test_routers.py  test_security.py
